--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reach/router": "^1.3.4",
     "@tim-soft/react-spring-web": "^9.0.0-beta.36",
     "@walletconnect/web3-provider": "^1.7.1",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.1",
     "cra-template": "1.1.2",
     "elegant-icons": "0.0.1",
@@ -20,6 +21,7 @@
     "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^1.6.3",
     "react-cool-onclickoutside": "^1.6.2",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.1.0",
     "react-parallax-tilt": "^1.6.0",
